--- a/HTML+CSS/task_001_tributePage/index.css
+++ b/HTML+CSS/task_001_tributePage/index.css
@@ -1,3 +1,7 @@
+* {
+  padding: 0.5rem;
+}
+
 main {
   background: #f2f3f4;
 }
@@ -22,7 +26,7 @@ p {
 }
 
 h2 {
-  font-size: 18px;
+  font-size: 1.5rem;
   font-weight: 600;
 }
 
@@ -39,4 +43,8 @@ h2 {
 
 a {
   color: #a1caf1;
+}
+
+.content {
+  line-height: 1.7;
 }
