--- a/HTML+CSS/task_002_form/index.css
+++ b/HTML+CSS/task_002_form/index.css
@@ -1,5 +1,5 @@
 body {
-  background: #a1caf1;
+  background: #ace5ee;
   color: #f2f3f4;
   font-family: arial;
 }
@@ -19,6 +19,7 @@ body {
 form {
   background: #6699cc;
   padding: 2.5rem;
+  border-radius: 10px;
 }
 .form-group {
   display: flex;
@@ -28,6 +29,11 @@ form {
 .form-control {
   border-radius: 3px;
   padding: 0.5rem;
+  outline: none;
+  border: 0;
+  margin-top: 0.5rem;
+  margin-bottom: 1rem;
+  font-size: 1rem;
 }
 
 .input-textarea {
@@ -38,6 +44,7 @@ form {
 .form-group p {
   margin-bottom: 0.5em;
   margin-top: 1.5em;
+  font-size: 1.1rem;
 }
 
 .submit-button {
@@ -52,4 +59,9 @@ form {
   cursor: pointer;
   opacity: 0.8;
   font-size: 18px;
+}
+
+.input-checkbox,
+.input-radio {
+  margin: 0.5rem;
 }
