--- a/HTML+CSS/task_003_productLandingPage/index.css
+++ b/HTML+CSS/task_003_productLandingPage/index.css
@@ -119,7 +119,7 @@ input {
 .pricing-con {
   margin: 60px auto;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   width: 70vw;
 }
@@ -151,7 +151,15 @@ input {
   margin-bottom: 2rem;
   width: 100px;
 }
-@media (max-width: 800px) {
+
+@media screen and (min-width: 768px) {
+  .pricing-con {
+    display: flex;
+    flex-direction: row;
+  }
+}
+
+@media screen and (max-width: 800px) {
   .pricing-container {
     max-width: 300px;
     width: 100%;
