--- a/HTML+CSS/task_004_technicalDocumentationPage/index.css
+++ b/HTML+CSS/task_004_technicalDocumentationPage/index.css
@@ -19,9 +19,15 @@ nav {
   margin: 0 auto;
 }
 .nav-link {
-  padding: 5px;
-  margin: 0.5rem;
+  padding: 1.2rem 0.5rem 0.7rem;
+  margin: 0;
   border-bottom: 1px solid #dcdcdc;
+}
+.nav-link:hover {
+  background-color: #f2f3f4;
+}
+.nav-header {
+  text-align: center;
 }
 
 @media screen and (min-width: 768px) {
@@ -29,21 +35,20 @@ nav {
     display: flex;
   }
 
-  .nav-link {
-    width: 20vw;
-  }
-
   #navbar {
     position: fixed;
     min-width: 290px;
     top: 0px;
     left: 0px;
-    width: 300px;
+    width: 20vw;
     height: 100%;
     border-right: solid;
     border-color: #e6e8fa;
   }
 
+  .nav-content::-webkit-scrollbar {
+    display: none;
+  }
   .nav-header {
     width: auto;
     margin: 0 auto;
